@@ -55,10 +55,7 @@ L<TPath::Forester>
 
 with 'TPath::Forester' => { -excludes => 'wrap' };
 
-sub children {
-    my ( $self, $n ) = @_;
-    @{ $n->children };
-}
+sub children { @{ $_[1]->children } }
 
 sub tag { $_[1]->tag }
 
@@ -68,7 +65,7 @@ Whether the node is an array ref.
 
 =cut
 
-sub array : Attr { my ( $self, $n ) = @_; $n->type eq 'array' ? 1 : undef; }
+sub array : Attr { $_[1]->n->type eq 'array' ? 1 : undef; }
 
 =method C<@can('method')>
 
@@ -77,8 +74,8 @@ Attribute that is defined if the node in question has the specified method.
 =cut
 
 sub obj_can : Attr(can) {
-    my ( $self, $n, undef, undef, $method ) = @_;
-    $n->type eq 'object' && $n->value->can($method) ? 1 : undef;
+    my ( undef, $ctx, $method ) = @_;
+    $ctx->n->type eq 'object' && $ctx->n->value->can($method) ? 1 : undef;
 }
 
 =method C<@code>
@@ -87,7 +84,7 @@ Attribute that is defined if the node is a code reference.
 
 =cut
 
-sub code : Attr { my ( $self, $n ) = @_; $n->type eq 'code' ? 1 : undef; }
+sub code : Attr { $_[1]->n->type eq 'code' ? 1 : undef }
 
 =method C<@defined>
 
@@ -95,8 +92,7 @@ Attribute that is defined if the node is a defined value.
 
 =cut
 
-sub obj_defined :
-  Attr(defined) { my ( $self, $n ) = @_; defined $n->value ? 1 : undef; }
+sub obj_defined : Attr(defined) { defined $_[1]->n->value ? 1 : undef }
 
 =method C<@does('role')>
 
@@ -105,8 +101,8 @@ Attribute that is defined if the node does the specified role.
 =cut
 
 sub obj_does : Attr(does) {
-    my ( $self, $n, undef, undef, $role ) = @_;
-    $n->type eq 'object' && $n->value->does($role) ? 1 : undef;
+    my ( undef, $ctx, $role ) = @_;
+    $ctx->n->type eq 'object' && $ctx->n->value->does($role) ? 1 : undef;
 }
 
 =method C<@glob>
@@ -115,7 +111,7 @@ Attribute that is defined if the node is a glob reference.
 
 =cut
 
-sub glob : Attr { my ( $self, $n ) = @_; $n->type eq 'glob' ? 1 : undef; }
+sub glob : Attr { $_[1]->n->type eq 'glob' ? 1 : undef }
 
 =method C<@hash>
 
@@ -123,7 +119,7 @@ Attribute that is defined if the node is a hash reference.
 
 =cut
 
-sub hash : Attr { my ( $self, $n ) = @_; $n->type eq 'hash' ? 1 : undef; }
+sub hash : Attr { $_[1]->n->type eq 'hash' ? 1 : undef }
 
 =method C<@isa('Foo','Bar')>
 
@@ -132,10 +128,10 @@ Attribute that is defined if the node instantiates any of the specified classes.
 =cut
 
 sub obj_isa : Attr(isa) {
-    my ( $self, $n, undef, undef, @classes ) = @_;
-    return undef unless $n->type eq 'object';
+    my ( undef, $ctx, @classes ) = @_;
+    return undef unless $ctx->n->type eq 'object';
     for my $class (@classes) {
-        return 1 if $n->value->isa($class);
+        return 1 if $ctx->n->value->isa($class);
     }
     undef;
 }
@@ -146,7 +142,7 @@ Attribute that returns the hash key, if any, associated with the node value.
 
 =cut
 
-sub key : Attr { $_[1]->tag }
+sub key : Attr { $_[1]->n->tag }
 
 =method C<@num>
 
@@ -154,7 +150,7 @@ Attribute defined for nodes whose value looks like a number according to L<Scala
 
 =cut
 
-sub num : Attr { my ( $self, $n ) = @_; $n->type eq 'num' ? 1 : undef; }
+sub num : Attr { $_[1]->n->type eq 'num' ? 1 : undef }
 
 =method C<@obj>
 
@@ -162,7 +158,7 @@ Attribute that is defined for nodes holding objects.
 
 =cut
 
-sub obj : Attr { my ( $self, $n ) = @_; $n->type eq 'object' ? 1 : undef; }
+sub obj : Attr { $_[1]->n->type eq 'object' ? 1 : undef }
 
 =method C<@ref>
 
@@ -170,7 +166,7 @@ Attribute defined for nodes holding references such as C<{}> or C<[]>.
 
 =cut
 
-sub is_ref : Attr(ref) { my ( $self, $n ) = @_; $n->is_ref ? 1 : undef; }
+sub is_ref : Attr(ref) { $_[1]->n->is_ref ? 1 : undef }
 
 =method C<@non-ref>
 
@@ -179,8 +175,7 @@ or numbers.
 
 =cut
 
-sub is_non_ref :
-  Attr(non-ref) { my ( $self, $n ) = @_; $n->is_ref ? undef : 1; }
+sub is_non_ref : Attr(non-ref) { $_[1]->n->is_ref ? undef : 1 }
 
 =method C<@repeat> or C<@repeat(1)>
 
@@ -192,11 +187,11 @@ is the specified repetition of the reference, where the first instance is repeti
 =cut
 
 sub repeat : Attr {
-    my ( $self, $n, undef, undef, $index ) = @_;
-    my $reps = $n->is_repeated;
+    my ( undef, $ctx, $index ) = @_;
+    my $reps = $ctx->n->is_repeated;
     return undef unless defined $reps;
     return $reps ? 1 : undef unless defined $index;
-    $n->is_repeated == $index ? 1 : undef;
+    $ctx->n->is_repeated == $index ? 1 : undef;
 }
 
 =method C<@repeated>
@@ -206,8 +201,7 @@ in the tree.
 
 =cut
 
-sub repeated :
-  Attr { my ( $self, $n ) = @_; defined $n->is_repeated ? 1 : undef; }
+sub repeated : Attr { defined $_[1]->n->is_repeated ? 1 : undef }
 
 =method C<@scalar>
 
@@ -215,8 +209,7 @@ Attribute that is defined for any node holding a scalar reference.
 
 =cut
 
-sub is_scalar :
-  Attr(scalar) { my ( $self, $n ) = @_; $n->type eq 'scalar' ? 1 : undef; }
+sub is_scalar : Attr(scalar) { $_[1]->n->type eq 'scalar' ? 1 : undef }
 
 =method C<@str>
 
@@ -224,7 +217,7 @@ Attribute that is defined for any node holding a string.
 
 =cut
 
-sub str : Attr { my ( $self, $n ) = @_; $n->type eq 'string' ? 1 : undef; }
+sub str : Attr { $_[1]->n->type eq 'string' ? 1 : undef }
 
 =method C<@undef>
 
@@ -232,8 +225,7 @@ Attribute that is defined for any node holding the C<undef> value.
 
 =cut
 
-sub is_undef :
-  Attr(undef) { my ( $self, $n ) = @_; $n->type eq 'undef' ? 1 : undef; }
+sub is_undef : Attr(undef) { $_[1]->n->type eq 'undef' ? 1 : undef }
 
 =method wrap
 
