@@ -2,6 +2,7 @@ Revision history for TPath::Forester::Ref
 
 {{$NEXT}}
   * removed some redundant code
+  * adapted to new TPath API
 
 0.002     2013-03-12 00:18:36 EST5EDT
   * made dsel sensitive to array context
